--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /* NavBar */
+.miiconodelnav{
+    border-radius: 30%;
+}
 .navbar{
     background-color: rgb(0, 0, 0);
 }    
@@ -7,7 +10,8 @@
     --bs-nav-link-hover-color: rgb(0, 0, 0);
 }
 .color-nav{
-    color: rgb(175, 0, 0);
+    color: rgb(180, 0, 0);
+    font-size: medium;
 
 }
 .navbar-mia{
@@ -15,11 +19,18 @@
     justify-content: space-around;
     
 }
+ul{
+    
+}
 .navbar-mobile{
-    background-color: darkred;
+    background-color: rgb(125, 0, 0);
 }
 
 /* index */
+h1, h2, h5, p, a{
+    font-family: 'Roboto Slab', serif;
+}
+
 body{
     background-color:  #260000;
 }
@@ -67,16 +78,29 @@ ul, li{
 
 .contenedordebeats{
     background-color: black;
+    margin-bottom: 30px;
 }
 .border-botton{
        color: rgb(34, 33, 33);
 }
 .buyboton{
-    background-color: darkred;
+    background-color: rgb(205, 0, 0);
 }
 
 div{
     color: aliceblue;
+}
+.titulo-ins{
+    padding-left: 180px;
+}
+.tiempo-ins{
+    padding-left: 80px;
+}
+.bpm-ins{
+    padding-left: 60px;
+}
+.tags-ins{
+    padding-right: 60px ;
 }
 
 /* servicios */
@@ -97,9 +121,11 @@ div{
 }
 
 /* sobremi */
-.biografia{
-    margin: 50px 40px 50px 40px ;
-    background-color: rgba(0, 0, 0, 0.8);
+
+.biografialogo{
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
 }
 
 /* contacto */
@@ -107,7 +133,11 @@ div{
 .bgblack{
     background-color: black;
 }
-
+.mibotondeenviar{
+    border: #000000;
+    background-color: darkred;
+    color: aliceblue;
+}
 
 
 /* footer */
@@ -118,6 +148,7 @@ footer{
 }
 .logodelfooter{
    margin-bottom: 15px;
+   border-radius: 30%;
 }
 .titulos{
         color: aliceblue;;
@@ -164,8 +195,27 @@ ul{
 /* mobile */
 
 /* index */
-/* @media screen and (max-width: 576px) {
-     .contenedor-licencias{
-        margin: 30px 30px 30px 30px;
+
+@media screen and (max-width: 576px) and (min-width:100px)
+     {
+        .blackrosetitulo {
+            
+           align-items: start;
+           padding-top: 10px;
+           
+        }
+        .biografialogo{
+            width: 50%;
+            height: 50%;
+        }
+        p, h5, li{
+            font-size: small;
+        }
+        h2{
+            font-size: medium;
+        }
+        .blackrosetitulo{
+            display: none;
+        }
      }
-}  */
+  
