--- a/css/styleantiguo.css
+++ b/css/styleantiguo.css
@@ -19,15 +19,25 @@
     justify-content: space-around;
     
 }
-ul{
-    
-}
+
 .navbar-mobile{
     background-color: rgb(125, 0, 0);
 }
 
 /* index */
-h1, h2, h5, p, a{
+h1{
+    font-family: 'Roboto Slab', serif;
+}
+h2{
+    font-family: 'Roboto Slab', serif;
+}
+h5{
+    font-family: 'Roboto Slab', serif;
+}
+p{
+    font-family: 'Roboto Slab', serif;
+}
+a{
     font-family: 'Roboto Slab', serif;
 }
 
@@ -35,22 +45,15 @@ body{
     background-color:  #260000;
 }
 
-.blackrose{
-    color: #fffcfc;
+.blackrosetitulo{
+    color: rgb(6, 0, 0);
     
     
 }
 
-.h1{
-    color: rgb(255, 253, 253);
-    background-color: rgb(0, 0, 0);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
 .contenedor-licencias{
     background-color: rgb(8, 8, 45);
-    color: white;
+    color: rgb(255, 253, 253);
     border: 1px groove black;
     margin-bottom: 30px;
 }
@@ -107,9 +110,10 @@ div{
   max-width: 500px;
   margin: 10px;
   background-color: #000000;
-  border-radius: 1px solid #920000;
+  border-radius: 1px solid  rgb(180, 0, 0) ;
   padding: 10px;
 }
+
 
 
 /* servicios */
@@ -144,7 +148,7 @@ div{
 }
 .mibotondeenviar{
     border: #000000;
-    background-color: darkred;
+    background-color: rgb(180, 0, 0) ;
     color: aliceblue;
 }
 
@@ -160,7 +164,7 @@ footer{
    border-radius: 30%;
 }
 .titulos{
-        color: aliceblue;;
+        color: aliceblue;
 }
 .parrafodelfooter{
     color: gray;
@@ -192,11 +196,7 @@ footer{
     width: 30px;
     height: 30px;
 }
-.navbar-ultima{
-          background-color: black;
-          color: aliceblue;
-          display: flex;
-} 
+
 ul{
     color: aliceblue;
 }
@@ -225,6 +225,15 @@ ul{
         }
         .blackrosetitulo{
             display: none;
+        }
+        .titulo-ins, .tiempo-ins, .bpm-ins, .tags-ins{
+            display: none;
+        }
+        .mobile-none{
+            display: none;
+        }
+        .contenedor-comprar{
+            padding-left: 150px;
         }
      }
   
